# dymit-backend

./: .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
cdn-resources/presets/interest/: interests.json
dymit-backend-api/: AGENTS.md  BACKLOG.md  TASKS.md  build.gradle.kts
dymit-backend-api/.agents-logs/: deployment-feat-schedule-file-sharing.md
dymit-backend-api/agent-roles/: CODER.md  PM.md  REVIEWER.md  TESTER.md
dymit-backend-api/scripts/: run-agent-task.sh  spawn-agent.sh
dymit-backend-api/uml/: 로그인_플로우.puml
micro-apps/study-crawler/: AGENTS.md  Dockerfile  build.gradle.kts  main.py  parsing.yaml  pyproject.toml
micro-apps/study-crawler/app/: crawler.py  site_config.py
micro-apps/study-crawler/app/db/: __init__.py  mongodb_connection.py
micro-apps/study-crawler/app/dto/: __init__.py  study_info.py
micro-apps/study-crawler/app/schema/: __init__.py  study_info_schema.py
micro-apps/study-crawler/app/simple_http/: __init__.py  http_parser.py  http_request.py
micro-apps/study-crawler/app/strategy/: __init__.py  inflearn-strategy.py  strategy_factory.py  strategy_interface.py
micro-apps/study-crawler/tests/: conftest.py  test_crawler.py
micro-apps/study-crawler/tests/db/: test_mongodb_connection.py
micro-apps/study-crawler/tests/schema/: test_study_info_schema.py
micro-apps/study-crawler/tests/simple_http/: test_http_parser.py  test_http_request.py
micro-apps/study-crawler/tests/strategy/: test_inflearn_strategy.py
preset-images/members/: metadata.json
preset-images/study_groups/: metadata.json
uml/: 회원가입_플로우.puml
(+891 files in other folders)
